--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,12 +7,15 @@
 firmware_role_validate_date: '2024-06-25'
 firmware_role_validate_release: 'bookworm'
 
-# Default debian packages required for operation.
-firmware_role_packages:
-  - 'fwupd'  # base firmware updater
-
 # Default timeout for long actions (seconds).
 firmware_role_timeout: 600
 
 # Default number of polls (count).
 firmware_role_poll: 5
+
+###############################################################################
+# APT Packages
+###############################################################################
+
+firmware_role_packages:
+  - 'fwupd'  # base firmware updater.
