requirements.yml adjusted for length.
Changed:
* Asserts are now quiet by default for testing.

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -9,6 +9,7 @@
 
     - name: 'Default | verify | assert firmware package installed'
       ansible.builtin.assert:
+        quite: true
         that:
           - '"fwupd" in ansible_facts.packages'
         fail_msg: 'fwupd should be installed.'
