Use libraries for common operations.
Migrate to using standardized libraries for common operations and tests
within the role.

Changed:
* Migrate role to r_pufky.deb collection.
* Migrate common test patterns to r_pufky.lib.tests.
* Minimize use of line-length yamllint disable.
* Standardize molecule test docstrings.

--- a/defaults/main/packages.yml
+++ b/defaults/main/packages.yml
@@ -20,7 +20,7 @@ firmware_packages_absent: []
 # overwrite existing APT sources based on signing keys, potentially removing
 # configured APT sources if only non-free-firmware is specified).
 #
-# Uses r_pufky.srv.apt.apt_sources format.
+# Uses r_pufky.deb.apt.apt_sources format.
 #
 # Default: [] (unmanaged).
 firmware_apt_sources: []
