--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: 'firmware'
   author: 'r_pufky'
   description: 'Bare-metal firmware update management'
   company: 'N/A'
