--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   role_name: 'firmware'
   author: 'r_pufky'
-  description: 'Bare-metal firmware update management'
+  description: 'Bare-metal firmware update management.'
   company: 'N/A'
   license: 'AGPL-3.0 License'
   min_ansible_version: '2.18.0'
