--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,8 +4,8 @@
 ###############################################################################
 
 # Last time debian options were validated against a default configuration.
-firmware_role_validate_date: '2024-06-25'
-firmware_role_validate_release: 'bookworm'
+firmware_role_validate_date: '2025-08-22'
+firmware_role_validate_release: 'trixie'
 
 # Default timeout for long actions (seconds).
 firmware_role_timeout: 600
