--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -28,6 +28,7 @@ provisioner:
       callback_whitelist: 'profile_tasks, timer, yaml'
 platforms:
   - name: 'firmware-debian-13-vm-default'
+    # TODO(role): switch to debian/trixie64 when released.
     box: 'debian/testing64'
     memory: 4096
     cpus: 2
